# ralph

./: .gitignore  .gitmodules  MINOS.ipynb  README.md  requirements.txt
.github/workflows/: train.yml
.ipynb_checkpoints/: MINOS-checkpoint.ipynb
old/: extend.ipynb
scripts/: .gitignore  data_set_builder.py  generate_datasets_from_scratch.sh  imaginator.py  minos.py  mutate.sh  pandarize.py  utils.py
scripts/wasm_wrapper/: .gitignore  Cargo.toml  README.md  build.rs
scripts/wasm_wrapper/src/: lib.rs  model.onnx
