[package]
name = "wasm_wrapper"
version = "0.1.0"
edition = "2021"
description = "Simple wasm wrapper for an ONNX models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ort = "2.0.0-alpha.2"


# Add reqwest, tar and gz as a build dependency
# All of this just to download pin to compile the tracer :|
[build-dependencies.flate2]
version = "*"
[build-dependencies.tar]
version = "*"

[target.wasm32-unknown-emscripten]
rustflags = ["--no-entry"]